Port Shared Backpack to Fabric 1.16.5